All changes from right before the presentation

--- a/index.html
+++ b/index.html
@@ -1,6 +1,5 @@
 <!doctype html>  
 <html lang="en">
-	
 	<head>
 		<meta charset="utf-8">
 		
@@ -54,8 +53,9 @@
 					<h2>Mobile Matters</h2>
 					<ul>
 						<li class="fragment">79% of smartphone users use their phones to help make purchasing decisions <p /><p><small>(http://googlemobileads.blogspot.ca/2011/12/look-back-at-2011.html)</small></p></li>
-						<li class="fragment">Tablet use on the rise in North America (there are TONS of citations for this everywhere on the web)<p><img src="i/mobileusage.jpeg" style="height: 100px"/></p><p><small>http://articles.businessinsider.com/2011-05-25/tech/30020984_1_ipad-kindle-ereaders</small></p></li>
+						<li class="fragment">Tablet use on the rise in North America<p><small>(http://articles.businessinsider.com/2011-05-25/tech/30020984_1_ipad-kindle-ereaders)</small></p></li>
 					</ul>
+					<p class="fragment"><img src="i/mobileusage.jpeg" style="height: 300px;"/></p>
 					<aside class="notes">
 						<ul>
 							<li>Angelina looks up reviews for video games before she buys them, will look up ingredients on food packaging to know what she's eating</li>
@@ -67,7 +67,7 @@
 				<section>
 					<h2>Mobile Matters</h2>
 					<ul>						
-						<li>Mobile is the way that many will first view the web in places like Africa AND second biggest mobile market in the world! <p /><p><small>http://digitaljournal.com/article/314828</small></p></li>
+						<li>Mobile is the way that many will first view the web in Africa AND it is the second biggest mobile market in the world <p /><p><small>http://digitaljournal.com/article/314828</small></p></li>
 					</ul>
 					<p><img src="i/ewasteAfrica.jpeg" /></p>
 					<p><small>(photo credit: International Institute for Communication and Development (IICD))</small></p>
@@ -79,38 +79,35 @@
 				<section>
 					<h2>How do we make mobile websites?</h2>
 						<ul>
-							<li>Design separate sites for mobile and desktop (sometimes a tablet version too)</li>
-							<li>Mobify it (3rd party)</li>
-							<li>Responsive design</li>
+							<li class="fragment">Design separate sites for mobile and desktop (sometimes a tablet version too)</li>
+							<li class="fragment">Mobify it (3rd party - http://www.mobify.com/mobifyjs/)</li>
+							<li class="fragment">Responsive design</li>
 						</ul>
 				</section>
 				<section>
-					<h2>Pros and cons of designing separate sites</h2>
-					<h3>Pros</h3>
+					<h2>Pros of designing separate sites</h2>
 					<ul>
-						<li>Best performance</li>
-						<li>Highest level of detail control</li>
+						<li class="fragment">Best performance</li>
+						<li class="fragment">Highest level of detail control</li>
 					</ul>
 				</section>
 
 				<section>
-					<h2>Pros and cons of designing separate sites</h2>
-					<h3>Cons</h3>
+					<h2>Cons of designing separate sites</h2>
 					<ul>
 						<li class="fragment">Multiple websites to maintain</li>
 						<li class="fragment">Poor redirection/no redirection for link sharing</li>
 					</ul>
 					<aside class="notes">
 						<ul>
-							<li class="fragment">Need to to managed multiple versions of content</li>
-							<li class="fragment">Sharing a link via desktop on Twitter and a mobile users clicks on it - shitty experience</li>
+							<li>Need to to managed multiple versions of content</li>
+							<li>Sharing a link via desktop on Twitter and a mobile users clicks on it - shitty experience</li>
 						</ul>
 					</aside>
 				</section>
 
 				<section>
-					<h2>Pros and Cons of Mobify (3rd party)</h2>
-					<h3>Pros:</h3>
+					<h2>Pros of Mobify (3rd party)</h2>
 					<ul>
 						<li class="fragment">Can use it on any existing desktop site, with existing security</li>
 						<li class="fragment">Serves up the page to mobile users at the same URL</li>
@@ -120,18 +117,16 @@
 				</section>
 
 				<section>
-					<h2>Pros and Cons of Mobify (3rd party)</h2>
-					<h3>Cons:</h3>
+					<h2>Cons of Mobify (3rd party)</h2>
 					<ul>
-						<li class="fragment">AJAX (content loaded asynchronously by JS) - based sites end up being slower<li>
-						<li class="fragment">Relies on 3rd party Javascript (code could break on upgrade)</li>
+						<li class="fragment">AJAX (content loaded asynchronously by JS) - based sites end up being slower</li>
+						<li class="fragment">Relies on 3rd party Javascript</li>
 						<li class="fragment">Learning curve - need to be familiar with Javascript, command line tools etc.</li>
 					</ul>
 				</section>
 
 				<section>
-					<h2>Pros and Cons of Responsive Design</h2>
-					<h3>Pros:</h3>
+					<h2>Pros of Responsive Design</h2>
 					<ul>
 						<li class="fragment">You only make one website!</li>
 						<li class="fragment">Not just about the device - resize the browser and it still looks good!</li>
@@ -139,23 +134,51 @@
 				</section>
 
 				<section>
-					<h2>Pros and Cons of Responsive Design</h2>
-					<h3>Cons:</h3>
+					<h2>Cons of Responsive Design</h2>
 					<ul>
 						<li class="fragment">Development time</li>
-						<li class="fragment">Worse performance (if you don't know what you're doing)</li>
+						<li class="fragment">Worse performance </li>
 					</ul>
 					<aside class="notes">
 						<ul>
 							<li>We're giving you the barebones, but to do a richly interactive site requires a lot of work</li>
-							<li>All the magic to resize and refit the websites (including extra helper scripts) makes website slower - unless you REALLY know what you're doing</li>
+							<li>All the magic to resize and refit the websites (including extra helper scripts) makes website slower - unless you REALLY know what you're doing - have to know about performance - we'll get to that in a bit</li>
 						</ul>
 					</aside>
 				</section>
 				<section>
-					<h2>Designing for Mobile</h2>
-					<p>You will get the best results if you design for mobile first.</p>
+					<h2>Design Tools</h2>
 					<ul>
+						<li class="fragment">Pencil & Paper</li>
+						<li class="fragment">Photoshop</li>
+					</ul>
+				<aside class="notes">
+					<ul>
+						<li>Nothing beats pen and paper - non-commital, if you sit at a computer all day it's different, easy to get out a lot of ideas quickly - Photoshop is good for precision but pen and paper can't be beat for speed</li>
+						<li>You can use alternatives to Photoshop like GIMP, but honestly there aren't any other programs that really quite do as good of a job. Mention Adobe has student licenses. Also, PS (and AI to a lesser extent, depending on the designer you work with) is the industry standard.</li>
+					</ul>
+				</aside>
+				</section>
+				<section>
+					<h2>Development Tools</h2>
+					<ul>
+						<li class="fragment">HTML5 (check http://caniuse.com/)</li>
+						<li class="fragment">CSS 3 (check http://caniuse.com/)</li>
+						<li class="fragment">Javascript (Crockford's Javascript: The Good Parts)</li>
+					</ul>
+
+					<aside class="notes">
+					<ul>
+						<li>HTML 5 - explain how this term is used interchangeably</li>
+						<li>Prefer CSS over images for performance reasons</li>
+						<li>Mention thick client JS in relation to last point & explain Javascript's recent popularity</li>
+					</ul>
+					</aside>
+				</section>
+				<section>
+					<h2>Designing for Mobile</h2>
+					<ul>
+						<li class="fragment">You will get the best results if you design for mobile first</li>
 						<li class="fragment">Don't design to a fixed grid and then try to make it fluid later. Fluid grids/layout all the way!
 						<li class="fragment">Assume that you're designing for touch screens (iOS HIG suggests 44px^2 as tap target)</li>
 						<li class="fragment">Large headings work better on wider layouts</li>
@@ -170,7 +193,6 @@
 				</section>
 				<section>
 					<h2>Designing for Mobile</h2>
-					<p class="fragment">You will get the best results if you design for mobile first.</p>
 					<ul>
 						<li class="fragment">Navigation is less important than you think sometimes</li>
 						<li class="fragment">Get rid of superfluous content</li>
@@ -188,9 +210,7 @@
 				</section>
 				<section>
 					<h2>Bad Examples</h2>
-					<p>
-						Steam Clock website (screen shots) compared against recent redesign mocks. Also can probably find one more bad example on the internet somewhere.
-					</p>
+					<p>Steam Clock's website :(</p>
 					<aside class="notes">
 						Oh hey, these are some notes. They'll be hidden in your presentation, but you can see them if you run the speaker notes server.
 					</aside>
@@ -200,71 +220,27 @@
 					<h2>Good Examples</h2>
 					<p class="fragment">createdm.com</p>
 					<p class="fragment">choiceresponse.com</p>
-					<aside class="notes">
-						Oh hey, these are some notes. They'll be hidden in your presentation, but you can see them if you run the speaker notes server.
-					</aside>
-				</section>
-
-				<section>
-					<h2>Implementation</h2>
-					<p>
-						Slide about viewport, media queries, mobile-specific stuffs (which we will go on to implement shortly)
-					</p>
-					<pre><code contenteditable>
-function linkify( selector ) {
-  if( supports3DTransforms ) {
-    
-    var nodes = document.querySelectorAll( selector );
-
-    for( var i = 0, len = nodes.length; i < len; i++ ) {
-      var node = nodes[i];
-
-      if( !node.className ) ) {
-        node.className += ' roll';
-      }
-    };
-  }
-}
-					</code></pre>
-					<aside class="notes">
-						Oh hey, these are some notes. They'll be hidden in your presentation, but you can see them if you run the speaker notes server.
-					</aside>
 				</section>
 				<section>
 					<h2>Performance</h2>
-					<p>
-						Quick performance tips from Angelina
-					</p>
-
-					<pre><code contenteditable>
-function linkify( selector ) {
-  if( supports3DTransforms ) {
-    
-    var nodes = document.querySelectorAll( selector );
-
-    for( var i = 0, len = nodes.length; i < len; i++ ) {
-      var node = nodes[i];
-
-      if( !node.className ) ) {
-        node.className += ' roll';
-      }
-    };
-  }
-}
-					</code></pre>
+					<ul>
+						<li class="fragment">You NEED to care about performance</li>
+						<li class="fragment">Performance is actually about perception rather than stats - users first!</li>
+						<li class="fragment">Minify CSS and JS</li>
+						<li class="fragment">CSS in the head, JS in the footer (there are exceptions, like Mobify/Modernizer)</li>
+						<li class="fragment">Keep components under 25k</li>
+					</ul>
+					<p>For more check out: http://developer.yahoo.com/performance/rules.html/</p>
 					<aside class="notes">
-						Oh hey, these are some notes. They'll be hidden in your presentation, but you can see them if you run the speaker notes server.
+						<ul>
+							<li></li>
+						</ul>
 					</aside>
-				</section>
-
+				</section>		
 				<section>
-					<h2>Good Reads & Resources</h2>
-					<a href="http://bradfrostweb.com/blog/web/responsive-nav-patterns/">Responsive Navigation Patterns</a>
-				</section>				
-				<section>
-					<h1>GO FORTH AND MAKE WONDERFUL THINGS!</h1>
-					<h3 class="inverted">Angelina Fabbro / @angelinamagnum / angelina@steamclocksw.com</h3>
-					<h3 class="inverted">Jacky Gilbertson / @jackygilbertson / jackymakesthings@gmail.com</h3>
+					<h1>BREAK - THEN CODING!</h1>
+					<p class="inverted">Angelina Fabbro / @angelinamagnum / angelina@steamclocksw.com</p>
+					<p class="inverted">Jacky Gilbertson / @jackygilbertson / jackymakesthings@gmail.com</p>
 				</section>
 			</div>
 
